2003-03-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-marker.c (sp_marker_set): Implement all attributes

2003-03-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object-repr.c (sp_object_type_lookup): Added marker type

	* src/sp-marker.h: New file

	* src/sp-marker.c: New file

	* src/display/nr-arena-image.c (nr_arena_image_render): Use pixblock
	area instead the active area (that may be bigger)

	* src/helper/kde.cpp: Added SPModulePrintKDE object
	(sp_kde_get_module_print): Contructor

	* src/print.c: Port to modules, add KDE option

	* src/module.c (sp_module_register): Check for id, fix crash
	(sp_module_unregister): Ditto
	(sp_module_print_get_type): Implement SPModulePrint

	* src/document.h: Renamed private to priv to be nice with c++

	* src/Makefile.am (kdeldadd): Added LIB_KDEPRINT

	* configure.in: Enable modules by default

2003-03-04  MenTaLguY  <mental@rydia.net>

	* src/desktop.c: changed zoom_status to a spin button with logarithmic increment and a handy context menu
	(sp_dtw_zoom_*): added various event handlers for the new zoom spin button
	(sp_desktop_zoom_page): factored out code duplicated with zoom-context.c
	(sp_desktop_zoom_selection): ditto
	(sp_desktop_zoom_drawing): ditto
	(sp_desktop_widget_init): removed unused SPDesktopWidget::zoom member and replaced zoom label with a spin button

	* src/desktop.h: removed unused SPDesktopWidget::zoom member, added new sp_desktop_zoom_* methods

	* src/zoom-context.c (sp_zoom_drawing): factored out code to desktop.c
	(sp_zoom_page): NRRectD -> NRRectF, factored out code to desktop.c
	(sp_zoom_selection): factored out code to desktop.c
	
2003-03-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/Makefile.am: Compile KDE module if needed

	* src/main.c (sp_main_gui): Initialize/shutdown KDE module if WITH_KDE

	* src/file.c (sp_file_open_dialog): Use KDE file dialog, if WITH_KDE

	* src/Makefile.am: Add KDE libraries if needed
